Elnur and Dima graduating

--- a/i_team.html
+++ b/i_team.html
@@ -41,6 +41,7 @@
             <li><a
                 href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent
 
+
                 Condat</a> (11/2019-present) </li>
           </ul>
           <h2>Postdocs </h2>
@@ -55,8 +56,7 @@
               (2/2019-present)<br>
             </li>
             <li><a href="https://qianxunk.github.io">Xun Qian</a>
-              (11/2018-present)<br>
-            </li>
+              (11/2018-present)</li>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a>
               (1/2018<span class="style1" style="width: 300px;">-</span>1/2019)<br>
             </li>
@@ -65,6 +65,12 @@
           </ul>
           <h2>PhD Students </h2>
           <ul>
+            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
+              (1/2020-present)</li>
+            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
+
+                Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
               (1/2019-present)</li>
             <li><a href="http://www.ali-sa.org/">Alibek Sailanbayev</a>
@@ -78,21 +84,26 @@
           </ul>
           <h2>MS Students </h2>
           <ul>
+            <li><a
+                href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+                Shulgin</a> (1/2020-present)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed
+
 
                 Basyoni</a> (8/2019-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír
-                Hanzely</a> (8/2019-present)<br>
-            </li>
+                Hanzely</a> (8/2019-present)</li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
 
-                Gasanov</a> (9/2018-present)</li>
+
+                Gasanov</a> (9/2018-12/2019)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
-              (9/2018-present)</li>
+              (9/2018-12/2019)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
                 Sailanbayev</a> (8/2017-12/2018)<br>
             </li>
@@ -102,6 +113,7 @@
           <ul>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang
+
 
 
 
@@ -140,10 +152,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -203,10 +217,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -262,10 +278,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -326,10 +344,12 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
 
 
 
@@ -347,6 +367,7 @@
             <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
             <li><a
                 href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal
+
 
 
 
@@ -371,12 +392,14 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Li</a> (Nanyang Technological University), 9/2019<br>
             </li>
             <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier
                 Bresson</a> (NTU Singapore), 4/2019<br>
             </li>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
+
 
 
 
@@ -412,6 +435,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Kamzolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
@@ -419,6 +443,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
               10-11/2018</li>
             <li><a href="https://vision.in.tum.de/members/moellenh">Thomas
+
 
 
 
@@ -483,6 +508,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
@@ -492,6 +518,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
               (Télécom ParisTech), 10/2017<br>
             </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
+
 
 
 
@@ -593,6 +620,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -634,6 +662,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -641,6 +670,7 @@ href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xi
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -714,6 +744,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -723,6 +754,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -804,6 +836,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
@@ -815,6 +848,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -899,6 +933,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -941,6 +976,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
@@ -950,6 +986,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
 href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
 
 
 
@@ -1027,9 +1064,11 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -1076,11 +1115,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom<br>
             </li>
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+
 
 
 
@@ -1141,9 +1182,11 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+
 
 
 
@@ -1159,6 +1202,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -1214,6 +1258,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
@@ -1236,6 +1281,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+
 
 
 
@@ -1278,8 +1324,10 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
 
 
 
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+
 
 
 
@@ -1296,6 +1344,7 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
             </li>
             <li>Edward Cumberlege (2011, Edinburgh Mathematics), now: <a
 href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=264554286&amp;privcapId=214118497&amp;previousCapId=214118497&amp;previousTitle=Sagamore%20Investments">Director
+
 
 
 
@@ -1350,9 +1399,11 @@ D.
 
 
 
+
                 Ahipasaoglu</a> (LSE / SUTD)</li>
             <li><a
                 href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel
+
 
 
 
@@ -1421,6 +1472,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1455,8 +1507,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1528,8 +1582,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1565,6 +1621,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1635,9 +1692,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
