--- a/i_teaching.html
+++ b/i_teaching.html
@@ -32,6 +32,10 @@
       <div id="wrapper" class="main">
         <div id="content">
           <h2>KAUST</h2>
+          CS 390T, Special Topics in Federated Learning (<a
+            href="https://piazza.com/class/k56orikcc48kb">Spring 2020 -
+            Piazza</a>)<br>
+          <br>
           CS 394D, Contemporary Topics in Machine Learning (Spring 2018,
           <a
             href="https://www.piazza.com/kaust.edu.sa/spring2019/cs394d">Spring
@@ -46,10 +50,12 @@
 
 
 
+
             - Piazza</a>)<br>
           <br>
           CS 390FF, Big Data Optimization (Fall 2017, Fall 2018, <a
             href="https://piazza.com/kaust.edu.sa/fall2019/cs390ff/home">Fall
+
             2019 - Piazza</a>)<br>
           <br>
           <h2>External (Summer / Winter Doctoral Schools)<br>
@@ -65,7 +71,8 @@
 
 
 
-            2019 Summer School</a>, Berin, Germany, August 2019,<b> <br>
+
+            2019 Summer School</a>, Berlin, Germany, August 2019,<b> <br>
             "A Guided Walk Through the ZOO of Stochastic Gradient
             Descent Methods"</b> (6 hours)<b> <br>
           </b> <a href="talks/ZOO_course_ICCOPT2019.pdf">main slides</a>,
@@ -105,6 +112,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
 
 
 
+
             Days on High-Dimensional Learning and Optimization</a>,
           Grenoble, France, June 2014, <b>"Randomized Coordinate
             Descent for Big Data Optimization"</b> (6 hours), slides<br>
@@ -112,6 +120,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
           <h2>Edinburgh </h2>
           <a href="http://www.drps.ed.ac.uk/15-16/dpt/cxmath11146.htm">Modern
 Optimization
+
 
 
 
