FL course update

--- a/i_teaching.html
+++ b/i_teaching.html
@@ -33,8 +33,7 @@
         <div id="content">
           <h2>KAUST</h2>
           CS 390T, Special Topics in Federated Learning (<a
-            href="https://piazza.com/class/k56orikcc48kb">Spring 2020 -
-            Piazza</a>)<br>
+            href="https://piazza.com/kaust.edu.sa">Spring 2020 - Piazza</a>)<br>
           <br>
           CS 394D, Contemporary Topics in Machine Learning (Spring 2018,
           <a
@@ -51,10 +50,12 @@
 
 
 
+
             - Piazza</a>)<br>
           <br>
           CS 390FF, Big Data Optimization (Fall 2017, Fall 2018, <a
             href="https://piazza.com/kaust.edu.sa/fall2019/cs390ff/home">Fall
+
 
             2019 - Piazza</a>)<br>
           <br>
@@ -62,6 +63,7 @@
           </h2>
           <a
             href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT
+
 
 
 
@@ -113,6 +115,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
 
 
 
+
             Days on High-Dimensional Learning and Optimization</a>,
           Grenoble, France, June 2014, <b>"Randomized Coordinate
             Descent for Big Data Optimization"</b> (6 hours), slides<br>
@@ -120,6 +123,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
           <h2>Edinburgh </h2>
           <a href="http://www.drps.ed.ac.uk/15-16/dpt/cxmath11146.htm">Modern
 Optimization
+
 
 
 
