--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@ you will meet your destiny. Wait three days and I shall be alive again. </br>
 <h1>Samuel in San Diego</h1>
 
 <br><a href="https://eduardgorbunov.github.io/index.html#header3-a">Samuel Horváth</a>
-is in San Diego, and will soon be presenting the paper "Don’t jump through hoops and remove those loops:
-SVRG and Katyusha are better without the outer loop", joint work with Dmitry Kovalev and myself,
-at <a href="http://alt2020.algorithmiclearningtheory.org">ALT 2020</a>in San Diego.<br> Here is the
-list of <a href="http://alt2020.algorithmiclearningtheory.org/accepted-papers/">all accepted papers.</a>
-He will be back at KAUST in about 10 days.
+is in San Diego, and will soon be presenting the paper <a href="https://arxiv.org/abs/1901.08689">"Don’t jump through hoops and remove those loops:
+SVRG and Katyusha are better without the outer loop"</a>, joint work with Dmitry Kovalev and myself,
+at <a href="http://alt2020.algorithmiclearningtheory.org">ALT 2020</a> in San Diego.<br><br> Here is the
+list of <a href="http://alt2020.algorithmiclearningtheory.org/accepted-papers/">all accepted papers.</a> <br><br>
+Samuel will be back at KAUST in about 10 days.<br>
 
 <br>
 <br>
