--- a/i_team.html
+++ b/i_team.html
@@ -30,555 +30,113 @@
         <li><a href="i_consulting.html">Consulting</a></li>
       </ul>
       <div id="wrapper" class="main">
+
         <div id="content"> I am very fortunate to be able to work with a
           team of amazing and very talented people. If you want to join
           my group, read the instructions <a href="i_join.html">here.</a><br>
           <br>
+
           <h1>KAUST</h1>
           <br>
+
           <h2>Research Scientists </h2>
           <ul>
-            <li><a
-                href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent
-
-
-                Condat</a> (11/2019-present) </li>
+            <li><a href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent Condat</a> (11/2019-present) </li>
           </ul>
+
           <h2>Postdocs </h2>
           <ul>
-            <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a>
-              (10/2019-present)<br>
-            </li>
-            <li><a href="https://zhizeli.github.io">Zhize Li</a>
-              (9/2019-present)<br>
-            </li>
-            <li><a href="https://adil-salim.github.io">Adil Salim</a>
-              (2/2019-present)<br>
-            </li>
-            <li><a href="https://qianxunk.github.io">Xun Qian</a>
-              (11/2018-present)</li>
-            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a>
-              (1/2018<span class="style1" style="width: 300px;">-</span>1/2019)<br>
-            </li>
-            <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a>
-              (5/2017<span class="style1" style="width: 300px;">-5/2019</span>)</li>
+            <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)<br></li>
+            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-present)<br></li>
+            <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)<br></li>
+            <li><a href="https://qianxunk.github.io">Xun Qian</a> (11/2018-present)</li>
+            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (1/2018-1/2019)<br></li>
+            <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a> (5/2017<span class="style1" style="width: 300px;">-5/2019</span>)</li>
           </ul>
+
           <h2>PhD Students </h2>
           <ul>
-            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
-              (1/2020-present)</li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
-
-
-                Gasanov</a> (1/2020-present)</li>
-            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
-              (1/2019-present)</li>
-            <li><a href="http://www.ali-sa.org/">Alibek Sailanbayev</a>
-              (1/2019-present)</li>
-            <li><a href="https://konstmish.github.io/">Konstantin
-                Mishchenko</a> (9/2017<span class="style1" style="width:
-                300px;">-</span>present)</li>
-            <li><a href="https://fhanzely.github.io/index.html">Filip
-                Hanzely</a> (9/2017<span class="style1" style="width:
-                300px;">-</span>present)</li>
+            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
+            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur Gasanov</a> (1/2020-present)</li>
+            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
+            <li><a href="http://www.ali-sa.org/">Alibek Sailanbayev</a>  (1/2019-present)</li>
+            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
+            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-present)</li>
           </ul>
+
           <h2>MS Students </h2>
           <ul>
-            <li><a
-                href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
-                Shulgin</a> (1/2020-present)</li>
-            <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed
-
-
-                Basyoni</a> (8/2019-present)</li>
-            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír
-                Hanzely</a> (8/2019-present)</li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
-
-
-                Gasanov</a> (9/2018-12/2019)</li>
-            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
-              (9/2018-12/2019)</li>
-            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
-              (8/2017-12/2018)</li>
-            <li><a
-                href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
-
-
-                Sailanbayev</a> (8/2017-12/2018)<br>
-            </li>
+            <li><a href="https://www.researchgate.net/profile/Egor_Shulgin">Egor Shulgin</a> (1/2020-present)</li>
+            <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-present)</li>
+            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-present)</li>
+            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur Gasanov</a> (9/2018-12/2019)</li>
+            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019)</li>
+            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018)</li>
+            <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a> (8/2017-12/2018)<br> </li>
           </ul>
-          <h2> Research Interns<br>
-          </h2>
+
+          <h2> Research Interns</h2>
           <ul>
-            <li><a
-                href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang
-
-
-
-
-                H. Nguyen</a> (Minerva Schools at KGI), 10/2019-present<br>
-            </li>
-            <li><a href="https://rka97.github.io">Ahmed Khaled</a>
-              (Cairo University), 6/2019-9/2019</li>
-            <li><a href="https://github.com/Selim78">Sélim Chraibi</a>
-              (Grenoble, Rhône-Alpes), 4/2019-9/2019<br>
-            </li>
-            <li>Ľudovít Horváth (Comenius University), 2/2019-3/2019 <br>
-            </li>
-            <li><a
-                href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Sokolov</a> (Moscow Institute of Physics and
-              Technology), 1/2019-2/2019</li>
-            <li><a
-                href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Gorbunov</a> (Moscow Institute of Physics and
-              Technology), 1/2019-2/2019<br>
-            </li>
-            <li><a
-                href="https://www.researchgate.net/profile/Vladislav_Elsukov">Vladislav
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Elsukov</a> (Moscow Institute of Physics and
-              Technology), 1/2019-2/2019</li>
-            <li><a
-                href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Shulgin</a> (Moscow Institute of Physics and
-              Technology), 1/2019-2/2019</li>
-            <li>Sarah Sachs (Technical University Munich), 3/2018-8/2018<br>
-            </li>
-            <li><a
-                href="https://www.researchgate.net/profile/Dmitry_Kovalev8">Dmitry
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Kovalev</a> (Moscow Institute of Physics and
-              Technology), 1/2018-2/2018<br>
-            </li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Gasanov</a> (Moscow Institute of Physics and
-              Technology), 1/2018-2/2018 </li>
-            <li><a
-                href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Gorbunov</a> (Moscow Institute of Physics and
-              Technology), 1/2018-2/2018</li>
-            <li><a
-                href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Hanzely</a> (Comenius University), 1/2018-2/2018<br>
-            </li>
+            <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
+            <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
+            <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
+            <li> Grigory Malinovsky (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
+            <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-present<br>  </li>
+            <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 6/2019-9/2019</li>
+            <li><a href="https://github.com/Selim78">Sélim Chraibi</a> (Grenoble, Rhône-Alpes), 4/2019-9/2019<br> </li>
+            <li> Ľudovít Horváth (Comenius University), 2/2019-3/2019 <br> </li>
+            <li> <a href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor Sokolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
+            <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019<br> </li>
+            <li><a href="https://www.researchgate.net/profile/Vladislav_Elsukov">Vladislav Elsukov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
+            <li><a href="https://www.researchgate.net/profile/Egor_Shulgin">Egor Shulgin</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
+            <li> Sarah Sachs (Technical University Munich), 3/2018-8/2018<br> </li>
+            <li><a href="https://www.researchgate.net/profile/Dmitry_Kovalev8">Dmitry Kovalev</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018<br>   </li>
+            <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018 </li>
+            <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
+            <li><a href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír Hanzely</a> (Comenius University), 1/2018-2/2018<br> </li>
             <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
-            <li><a
-                href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal
-
-
-
-
-
-
-                Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @
-              KAUST<br>
-            </li>
+            <li><a href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @ KAUST<br> </li>
           </ul>
-          <h2>Visitors<br>
-          </h2>
+
+          <h2>Visitors</h2>
+
           <ul>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
               11/2019</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a>
               (Grenoble), 11-12/2019</li>
-            <li><a
-href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian
-
-
-
-
-
-
-
-                Li</a> (Nanyang Technological University), 9/2019<br>
-            </li>
-            <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier
-                Bresson</a> (NTU Singapore), 4/2019<br>
-            </li>
-            <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
-            </li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
-                Loizou</a> (Edinburgh), 4/2019-5/2019</li>
-            <li><a
-                href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
-
-
-
-
-
-
-
-
-
-
-
-
-                Kamzolov</a> (Moscow Institute of Physics and
-              Technology), 1/2019-2/2019</li>
-            <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
-              (Télécom ParisTech), 12/2018</li>
-            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
-              10-11/2018</li>
-            <li><a href="https://vision.in.tum.de/members/moellenh">Thomas
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Möllenhoff</a> (Munich), 8/2018<br>
-            </li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
-                Loizou</a> (Edinburgh), 1/2018-3/2018</li>
-            <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br>
-            </li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
-                Loizou</a> (Edinburgh), 10/2017-11/2017<br>
-            </li>
-            <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
-              (Télécom ParisTech), 10/2017<br>
-            </li>
-            <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
-            </li>
-            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
-              10/2017<br>
-            </li>
-            <li> <a href="http://mtakac.com">Martin Takáč</a> (Lehigh),
-              5/2017</li>
-            <li><a href="Alibek%20Sailanbayev">Alibek Sailanbayev</a>
-              (Nazarbayev University), 4/2017</li>
-            <li><a href="http://jakubkonecny.com">Jakub Konečný</a>
-              (Edinburgh), 4/2017</li>
-            <li><a href="https://fhanzely.github.io/index.html">Filip
-                Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
-            <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a>
-              (HSE Moscow), 4/2017</li>
-            <li><a href="https://konstmish.github.io/">Konstantin
-                Mishchenko</a> (ENS/Paris Dauphine), 4/2017</li>
-            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
-                Loizou</a> (Edinburgh), 3/2017-5/2017<br>
-            </li>
+            <li><a href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian Li</a> (Nanyang Technological University), 9/2019<br> </li>
+            <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier Bresson</a> (NTU Singapore), 4/2019<br> </li>
+            <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br> </li>
+            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 4/2019-5/2019</li>
+            <li><a href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry Kamzolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
+            <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 12/2018</li>
+            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10-11/2018</li>
+            <li><a href="https://vision.in.tum.de/members/moellenh">Thomas Möllenhoff</a> (Munich), 8/2018<br> </li>
+            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 1/2018-3/2018</li>
+            <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br> </li>
+            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 10/2017-11/2017<br> </li>
+            <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 10/2017<br> </li>
+            <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita Doikov</a> (HSE Moscow), 10/2017-11/2017<br> </li>
+            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10/2017<br> </li>
+            <li> <a href="http://mtakac.com">Martin Takáč</a> (Lehigh), 5/2017</li>
+            <li><a href="Alibek%20Sailanbayev">Alibek Sailanbayev</a> (Nazarbayev University), 4/2017</li>
+            <li><a href="http://jakubkonecny.com">Jakub Konečný</a> (Edinburgh), 4/2017</li>
+            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
+            <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (HSE Moscow), 4/2017</li>
+            <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (ENS/Paris Dauphine), 4/2017</li>
+            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a> (Edinburgh), 3/2017-5/2017<br> </li>
           </ul>
-          <span style="font-weight: bold;"><br>
-            <br>
-          </span>
+
+          <br>
+          <br>
+
+
           <h1>EDINBURGH</h1>
           <br>
-          <h2> Postdocs<br>
-          </h2>
+
+          <h2> Postdocs</h2>
+
           <ul>
             <li><a href="https://gowerrobert.github.io/">Robert Mansel
                 Gower</a> (3/2016<span class="style1" style="width:
